--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-### C++ template
 # Compiled Object files
+**/.DS_Store
 *.slo
 *.lo
 *.o
@@ -16,6 +16,7 @@
 
 # Fortran module files
 *.mod
+*.smod
 
 # Compiled Static libraries
 *.lai
@@ -28,39 +29,27 @@
 *.out
 *.app
 
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+**/cmake-build-debug
+**/CMakeCache.txt
+**/cmake_install.cmake
+**/install_manifest.txt
+**/CMakeFiles/
+**/CTestTestfile.cmake
+**/Makefile
+**/*.cbp
+**/CMakeScripts
+**/compile_commands.json
 
-# User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
+include/divisible/*
 
-# Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
 
-# Gradle:
-.idea/gradle.xml
-.idea/libraries
+## Local 
 
-# Mongo Explorer plugin:
-.idea/mongoSettings.xml
+.idea/*.xml
 
-## File-based project format:
-*.iws
+build/**/*
 
-## Plugin-specific files:
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
+include/*
+lib/*
+bin/*
+test/test_runner
