--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,19 @@
 cmake_minimum_required(VERSION 3.28)
-project(GLNucFu)
+project(FluidSim)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(GLNucFu
-        fluid2D.cpp
+add_executable(FluidSim
+        main.cpp
         headers/shader.h
         headers/compute.h
         src/compute.cpp
         headers/includes.h
         src/shader.cpp
+        src/Fluid2D.cpp
+        headers/Fluid2D.h
+        src/Render.cpp
+        headers/Render.h
 )
 
 add_subdirectory(thirdparty/glfw)
@@ -21,5 +25,5 @@ target_include_directories(glad PUBLIC thirdparty/glad/include)
 
 find_package(OpenGL REQUIRED)
 
-target_link_libraries(GLNucFu glfw glm::glm glad OpenGL::GL)
+target_link_libraries(FluidSim glfw glm::glm glad OpenGL::GL)
 
