--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@
 
 # CMake generated files
 **/cmake-build-debug/
+**/cmake-build-release/
 **/CMakeCache.txt
 **/cmake_install.cmake
 **/install_manifest.txt
