adding miniaudio library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,34 @@ include_directories(${IMGUI_DIR} ${IMGUI_DIR}/backends ..)
 
 add_executable(
         ${PROJECT_NAME}
+        # ----{ Simulation }----
+        # mandatory files
+        include/libraries.h # libraries
+        src/main.cpp # main
+        include/shaders/shader.h # shader
+        src/shaders/shader.cpp
+        include/shaders/compute.h # compute shader
+        src/shaders/compute.cpp
+        include/shaders/Renderer.h # renderer
+        src/shaders/Renderer.cpp
+        include/sim/Fluid.h # abstract Fluid class
+        src/sim/Fluid.cpp
+        include/SimData.h # Struct to pass data between simulation and interface
+        src/SimData.cpp
+        include/ui/Interface.h # Interface
+        src/ui/Interface.cpp
+        # 2D files
+        include/sim/2D/Fluid2D.h # abstract Fluid2D class
+        src/sim/2D/Fluid2D.cpp
+        include/sim/2D/GLFlu2D.h # GL Fluid 2D
+        src/sim/2D/GLFlu2D.cpp
+        include/sim/2D/cpuFlu2D.h # CPU Fluid 2D
+        src/sim/2D/cpuFlu2D.cpp
+        src/sim/2D/GLoFlu2D.cpp # Optimized GL Fluid 2D (not working for now)
+        include/sim/2D/GLoFlu2D.h
+        # ----{ thirdparty }----
+        thirdparty/miniaudio.h
+        thirdparty/stb_image.h
         # Dear ImGui
         ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp
         ${IMGUI_DIR}/backends/imgui_impl_opengl3.cpp
@@ -25,33 +53,10 @@ add_executable(
         ${IMGUI_DIR}/imgui_demo.cpp
         ${IMGUI_DIR}/imgui_tables.cpp
         ${IMGUI_DIR}/imgui_widgets.cpp
-        # Simulation
-        src/main.cpp
-        include/shaders/shader.h
-        include/shaders/compute.h
-        src/shaders/compute.cpp
-        include/libraries.h
-        src/shaders/shader.cpp
-        src/sim/2D/GLFlu2D.cpp
-        include/sim/2D/GLFlu2D.h
-        src/shaders/Renderer.cpp
-        include/shaders/Renderer.h
-        include/sim/2D/Flu2D.h
-        src/sim/2D/cpuFlu2D.cpp
-        include/sim/2D/cpuFlu2D.h
-        src/sim/2D/Flu2D.cpp
-        include/sim/Fluid.h
-        src/sim/2D/GLoFlu2D.cpp
-        include/sim/2D/GLoFlu2D.h
-        src/sim/Fluid.cpp
-        #thirdparty
-        thirdparty/stb_image.h
-        include/SimData.h
-        src/ui/Interface.cpp
-        include/ui/Interface.h
-        src/SimData.cpp
-        #include/sim/2D/VkFlu2D.cpp
-        #include/sim/2D/VkFlu2D.h
+        include/SoundConvertor.cpp
+        include/SoundConvertor.h
+
+
 )
 
 target_link_libraries(
